# lumi-dash

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/apps/: app.rs  launcher.rs  main_menu.rs  mod.rs  spotify.rs
src/modules/: date.rs  image.rs  mod.rs  module.rs  time.rs
src/pixel_display/: input_handler.rs  mod.rs  pixel_display.rs
