[package]
name = "rpi-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.31"
embedded-graphics = "0.8.1" 
embedded-graphics-simulator = { version = "0.6.0", optional = true }
rpi-led-panel = { version = "0.5.1", optional = true }

[features]
default = ["simulator"]
real = ["dep:rpi-led-panel"]
simulator = ["dep:embedded-graphics-simulator"]
