[package]
name = "rpi-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
chrono = "0.4.31"
embedded-graphics = "0.8.1" 
embedded-sprites = "0.1.2"
rpi-led-panel = { version = "0.5.1"}
tinybmp = "0.5.0"

[dependencies.embedded-graphics-simulator]
version = "0.6.0"
default-features = false

[features]
simulated = ["embedded-graphics-simulator/with-sdl"]