[package]
name = "lumi-dash"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
async-trait = "0.1.77"
chrono = "0.4.31"
embedded-graphics = "0.8.1" 
embedded-sprites = "0.1.2"
image = {version = "0.24.8", features = ["bmp"] }
rand = "0.8.5"
rpi-led-panel = { version = "0.5.1"}
rppal = { version = "0.17.1", optional = true }
rspotify = { version = "0.12.0", features = ["cli", "client-ureq", "ureq-rustls-tls"], default-features = false }
tinybmp = "0.5.0"
ureq = "2.9.1"

[dependencies.embedded-graphics-simulator]
version = "0.6.0"
default-features = false

[features]
default = ["real"]
real = ["rppal"]
simulated = ["embedded-graphics-simulator/with-sdl"]
